Language detection (EN/IT only) is now working

--- a/src/Rossy.App/appSettings.json
+++ b/src/Rossy.App/appSettings.json
@@ -1,5 +1,8 @@
 ﻿{
+
   "Rosetta": {
+    "TextAnalysisSubscriptionKey": "",
+    "TextAnalysisEndpoint": "",
     "PredictionKey": "",
     "Endpoint": "",
     "AppIdEN": "",
