--- a/src/Rossy.Runner/appSettings.json
+++ b/src/Rossy.Runner/appSettings.json
@@ -1,5 +1,7 @@
 ﻿{
   "Rosetta": {
+    "TextAnalysisSubscriptionKey": "",
+    "TextAnalysisEndpoint": "",
     "PredictionKey": "",
     "Endpoint": "",
     "AppIdEN": "",
