Broken compilation of the console application is now fixed

--- a/src/Rossy.App/appSettings.json
+++ b/src/Rossy.App/appSettings.json
@@ -1,5 +1,8 @@
 ﻿{
-
+  "Modem": {
+    "Endpoint": "",
+    "Key": ""
+  },
   "Rosetta": {
     "TextAnalysisSubscriptionKey": "",
     "TextAnalysisEndpoint": "",
