--- a/src/Rossy.Runner/appSettings.json
+++ b/src/Rossy.Runner/appSettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "Modem": {
+    "Endpoint": "",
+    "Key": ""
+  },
   "Rosetta": {
     "TextAnalysisSubscriptionKey": "",
     "TextAnalysisEndpoint": "",
