audio production now working

--- a/src/Rossy.App/appSettings.json
+++ b/src/Rossy.App/appSettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "Modem": {
     "Endpoint": "",
-    "Key": ""
+    "Key": "",
+    "Region": ""
   },
   "Rosetta": {
     "TextAnalysisSubscriptionKey": "",
