Support added for vocal utterances

--- a/src/Rossy.App/Rossy.App.csproj
+++ b/src/Rossy.App/Rossy.App.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="AppConfig.cs" />
+    <Compile Include="AudioCapturePermissions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
